--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,8 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
-            Hello, WPF!
-        </TextBlock>
+        <TextBox Name="UsernameTextbox" HorizontalAlignment="Left" Height="23" Margin="81,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <PasswordBox Name="PasswordTextbox" HorizontalAlignment="Left" Height="23" Margin="81,83,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Click="Login" Content="Login" HorizontalAlignment="Left" Margin="56,143,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Username" HorizontalAlignment="Left" Margin="9,45,0,0" VerticalAlignment="Top"/>
+        <Label Content="Password" HorizontalAlignment="Left" Margin="9,83,0,0" VerticalAlignment="Top"/>
+        <Label Name="StatusText" HorizontalAlignment="Left" Margin="121,111,0,0" VerticalAlignment="Top" Foreground="Red"/>
+        <Button Click="GotoRegister" Content="Register" HorizontalAlignment="Left" Margin="153,143,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
